--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-requests==2.26.0
-python-telegram-bot==13.7
-beautifulsoup4==4.9.3
-pydantic==1.8.2
+requests
+python-telegram-bot
+beautifulsoup4
+pydantic
+watchdog
